# Wasmcloud-telnet-client-provider-

./: .gitignore  Agents.md  Cargo.toml  README.md  TESTING.md  TEST_RESULTS.md  wadm.yaml  wasmcloud.toml
.github/workflows/: ci.yml  release.yml
component/: wasmcloud.toml
component/src/: lib.rs
component/wit/: deps.toml  world.wit
src/: config.rs  main.rs  provider.rs  telnet.rs
tests/: README.md  run_integration_test.sh  telnet_server.py
wit/: world.wit
