[package]
name = "wasmcloud-provider-telnet"
version = "0.1.0"
edition = "2021"
description = """
A capability provider for unidirectional Telnet client functionality.
Connects to remote Telnet servers and forwards messages to wasmCloud components via NATS.
"""

[workspace]

[badges.maintenance]
status = "actively-developed"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
wasmcloud-provider-sdk = { version = "0.13.0", features = ["otel"] }
wit-bindgen-wrpc = "0.9.0"

# Additional utilities
base64 = "0.22"
thiserror = "1"
